# auth-service

./: .coverage  .db.env.example  .example.dbenv  .gitignore  .pre-commit-config.yaml  .prod.env.example  CODE-OF-CONDUCT.md  Dockerfile  README.md  compose.prod.yml  compose.yml  entrypoint.sh  gateway.py  premier.yml  pyproject.toml
.data/: auth.db
.github/: dependabot.yml
.github/workflows/: cc.yml  dependabot.yml  docker-image.yml  shippe.yml  test.yml
src/: app.py
src/crypto/: __init__.py  utils.py
src/database/: __init__.py  connection.py  redis_connection.py  schema.sql  settings.py
src/database/dao/: __init__.py  tokens.py  users.py
src/dto/: api.py
src/routes/: api.py  health.py
test/: app_test.py  crypto_test.py  dao_test.py  database_test.py  test_app.py  test_crypto.py  test_crypto_utils.py  test_dao_tokens.py  test_dao_users.py  test_database_connection.py  test_database_setup.py  test_dto.py  test_dto_api.py  test_redis_connection.py  test_routes.py  test_routes_api_additional.py  test_routes_api_extended.py  test_tokens_redis.py  test_users_dao.py
